docs/book/samples/ch03/twins_check.out
error[dispatch]: overlapping overloads of `same` are illegal
  --> twins_check.kso:4:4
   4 | fn same y
          ^
