docs/book/samples/ch03/twins_check.kso
fn same x
  x

fn same y
  y
